--- a/favorite.css
+++ b/favorite.css
@@ -1,9 +1,4 @@
-#favorite-list {
-    display: flex;
-    flex-direction: column;
-}
-
-.modal, .modals {
+.modal {
     position: fixed;
     top: 0;
     left: 0;
@@ -14,14 +9,14 @@
     align-items: center;
 }
 
-.modal_overlay, .modals_overlay {
+.modal_overlay {
     background-color: rgba(0, 0, 0, 0.6);
     width: 100%;
     height: 100%;
     position: absolute;
 }
 
-.modal_content, .modals_content {
+.modal_content {
     background-color: white;
     padding: 50px 100px;
     text-align: center;
@@ -41,23 +36,25 @@
     align-items: center;
 }
 
+.media {
+    width: 600px;
+    max-width: 100vw;
+    margin: 20px auto auto auto;
+}
+
+.title {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.button is-outlined {
+    margin-right: 20px;
+}
+
 .hidden {
     display: none;
-}
-
-.input-group, .form-floating {
-    width: 400px;
-    margin-bottom: 10px;
-}
-
-.btn-close {
-    top: 5%;
-    right: 5%;
-    position: absolute;
-}
-
-.btn_group {
-    display: flex;
 }
 
 .greeting {
