--- a/review.css
+++ b/review.css
@@ -1,4 +1,4 @@
-#favorite-list {
+#read-list {
     display: flex;
     flex-direction: column;
 }
@@ -62,4 +62,36 @@
 
 .greeting {
     color: white;
+}
+
+.media {
+    width: 800px;
+    max-width: 100vw;
+    margin: 20px auto auto auto;
+}
+
+.media > media-right {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.media > .media-content > .content > .starAndReview {
+    margin: 0;
+}
+
+.btn_group {
+    display: flex;
+    justify-content: space-around;
+}
+
+.btn {
+    margin-right: 10px;
+}
+
+.delete_message {
+    margin-bottom: 20px;
+}
+
+.starAndReview {
+    font-size: 12px;
 }
